--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,11 +17,11 @@ a {
 	background-color: transparent;
 }
 .process-row{
-	height: 38px;
+	height: 40px;
 }
 .process-spot{
 	border-radius: 50%;
-	border: 1px solid;
+	/*border: 1px solid;*/
 	background-color: transparent;
 	float: left;
 	margin: 10 0 auto 2;
@@ -41,4 +41,16 @@ a {
 
 .process-processer-running{
 	background-position: 0 -40px;
+}
+.prcess-spot-column-rotate--10{
+	transform: rotate(-10deg);      
+    -o-transform:rotate(-10deg);    
+    -webkit-transform:rotate(-10deg);
+    -moz-transform:rotate(-10deg); 
+}
+.prcess-spot-column-rotate-10{
+	transform: rotate(10deg);      
+    -o-transform:rotate(10deg);    
+    -webkit-transform:rotate(10deg);
+    -moz-transform:rotate(10deg); 
 }
