--- a/views/main.html
+++ b/views/main.html
@@ -1,179 +1,59 @@
-<html ng-app="MainApp">
+<DOCTYPE html>
+<html ng-app="SIApp">
 <head>
+	<title>MSC</title>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/ng-grid.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/angular-toggle-switch-bootstrap-3.css">
 </head>
-<body>
-	<div ng-controller="mapCtrl">
-		<div class="row process-row">
-		<div class="col-md-1 process-processer process-processer-running"> Email </div>
-		<div id="spotDiv" running-spots="spotDiv" class="col-md-2 process-spot-column">
-			<!-- <div class="process-spot" ></div>
-			<div class="process-spot process-spot-moving" ></div>
-			<div class="process-spot process-spot-moving" ></div>
-			<div class="process-spot" ></div>
-			<div class="process-spot" ></div>
-			<div class="process-spot" ></div>
-			<div class="process-spot" ></div>
-			<div class="process-spot" ></div> -->
-		</div>
-		<div class="col-md-1 process-processer process-processer-running"> MH8 </div>
+<body style="padding-top: 70px;">
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation" data-ng-controller="navCtrl">
+		<ul class="nav navbar-nav">
+			<li><a href="#">{{userInfo.userName}}</a></li>
+			<li class="dropdown">
+				<a href="" class="dropdown-toggle" data-toggle="dropdown">Configure<span  class="caret"></span></a>
+				<ul class="dropdown-menu" role="menu">
+					<li ng-repeat="item in userInfo.menu">
+						<a ng-href="#{{item}}" >{{item}}</a>
+					</li>
+				</ul>
+			</li>
+			<li><a href="#setPermission">Set Permission</a></li>
+		</ul>
+		<ul class="nav navbar-nav navbar-right">
+			<li><a href='#' style="margin-right: 50px;">Logout</a></li>
+		</ul>
+	</nav>
+	<div ng-view>
+		
 	</div>
-	</div>
-	
 	<script type="text/javascript" src="/javascripts/jquery-2.1.1.js"></script>
 	<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/javascripts/angular.js"></script>
+	<script type="text/javascript" src="/javascripts/self-controllers.js"></script>
 	<script type="text/javascript" src="/javascripts/angular-route.js"></script>
-	<script type="text/javascript" src="/javascripts/ng-grid.min.js"></script>
+	<script type="text/javascript" src="/javascripts/ng-grid.js"></script>
+	<script type="text/javascript" src="/javascripts/angular-toggle-switch.js"></script>
 	<script type="text/javascript">
-		// var divWidth = $('#spotDiv').width(),
-		// 	EXPECT_WIDTH = 15,
-		// 	EXPECT_MARGRIN_LEFT = 2,
-		// 	EXPECT_WIDTH_WITH_MARGIN = 17,
-		// 	AT_LEAST_COUNT = 6,
-		// 	actualCount,
-		// 	actualWidth,
-		// 	needDivWidth,
-		// 	blankWidth,
-		// 	leftBlank,
-		// 	rightBlank;
-
-		// actualCount = Math.floor(divWidth / (EXPECT_WIDTH+EXPECT_MARGRIN_LEFT));
-
-		// if(actualCount < 6){
-		// 	actualCount = AT_LEAST_COUNT;
-		// 	actualWidth =  Math.floor(divWidth / actualCount)-2;
-
-		// }else{
-		// 	actualWidth = EXPECT_WIDTH;
-		// }
-
-		// actualDivWidth = actualCount * (EXPECT_WIDTH+EXPECT_MARGRIN_LEFT);
-
-		// blankWidth = divWidth - needDivWidth;
-
-		// if(blankWidth < 2){
-		// 	leftBlank = blankWidth;
-		// 	rightBlank = 0;
-		// }else{
-		// 	leftBlank = Math.floor(blankWidth / 2) + 1;
-		// 	rightBlank = blankWidth - leftBlank;
-		// }
-
-		// for(var i = actualCount; i--;){
-		// 	$('#spotDiv').append($('<div class="process-spot" ></div>').css('height',actualWidth + 'px').css('width',actualWidth + 'px')).css('padding-left', leftBlank + 'px').css('padding-right', rightBlank + 'px');
-		// }
-
-		// (function running(containerId){
-
-		// 	//var spots = $('#' + containerId + ' > div'),
-		// 	var spots = $('[running-spots=' + containerId + '] > div'),
-		// 		index = -2,
-		// 		length = spots.length;
-
-		// 	function changeStatus(){
-		// 		if(index < 0){
-		// 			for(var i = 0; i < 3; i++){
-		// 				if(index + i >=0 ){
-		// 					$(spots[index+i]).addClass('process-spot-moving');
-		// 				}
-		// 			}
-		// 		}else if(index < length){
-		// 			$(spots[index-1]).removeClass('process-spot-moving');
-		// 			if((index + 2) < length){
-		// 				$(spots[index+2]).addClass('process-spot-moving');
-		// 			}
-		// 		}else{
-		// 			$(spots[index-1]).removeClass('process-spot-moving');
-		// 			index = -3;
-		// 		}
-		// 		index++;
-		// 		setTimeout(changeStatus, 200);
-		// 	}
-
-		// 	setTimeout(function(){
-		// 		changeStatus();
-		// 	},200)
-		// })('spotDiv');
-		angular.module('MainApp',[])
-		.controller('mapCtrl',function($scope){
-
+		angular.module('SIApp',['ngRoute','ngGrid','selfControllers','toggle-switch'])
+		.config(['$routeProvider',function($routeProvider){
+			$routeProvider
+			.when('/SI',{
+				templateUrl: '/partialviews/SIMain.html',
+				controller: 'SICtrl',
+				caseInsensitiveMatch: true
+			})
+		}])
+		.controller('navCtrl',function($scope,$rootScope){
+			$rootScope.userInfo = {
+				userName:'Jason',
+				menu:[
+					'SI'
+				]
+			};
 		})
-		.directive("runningSpots",function(){
-			return function(scope,element,attrs){
-				var divWidth = $(element).width(),
-					EXPECT_WIDTH = 15,
-					EXPECT_MARGRIN_LEFT = 2,
-					EXPECT_WIDTH_WITH_MARGIN = 17,
-					AT_LEAST_COUNT = 6,
-					actualCount,
-					actualWidth,
-					needDivWidth,
-					blankWidth,
-					leftBlank,
-					rightBlank;
-
-				actualCount = Math.floor(divWidth / (EXPECT_WIDTH+EXPECT_MARGRIN_LEFT));
-
-				if(actualCount < 6){
-					actualCount = AT_LEAST_COUNT;
-					actualWidth =  Math.floor(divWidth / actualCount)-2;
-
-				}else{
-					actualWidth = EXPECT_WIDTH;
-				}
-
-				actualDivWidth = actualCount * (EXPECT_WIDTH+EXPECT_MARGRIN_LEFT);
-
-				blankWidth = divWidth - needDivWidth;
-
-				if(blankWidth < 2){
-					leftBlank = blankWidth;
-					rightBlank = 0;
-				}else{
-					leftBlank = Math.floor(blankWidth / 2) + 1;
-					rightBlank = blankWidth - leftBlank;
-				}
-
-				for(var i = actualCount; i--;){
-					$(element).append($('<div class="process-spot" ></div>').css('height',actualWidth + 'px').css('width',actualWidth + 'px')).css('padding-left', leftBlank + 'px').css('padding-right', rightBlank + 'px');
-				}
-
-				(function running(containerId){
-
-					var spots = $('[running-spots=' + containerId + '] > div'),
-						index = -2,
-						length = spots.length;
-
-					function changeStatus(){
-						if(index < 0){
-							for(var i = 0; i < 3; i++){
-								if(index + i >=0 ){
-									$(spots[index+i]).addClass('process-spot-moving');
-								}
-							}
-						}else if(index < length){
-							$(spots[index-1]).removeClass('process-spot-moving');
-							if((index + 2) < length){
-								$(spots[index+2]).addClass('process-spot-moving');
-							}
-						}else{
-							$(spots[index-1]).removeClass('process-spot-moving');
-							index = -3;
-						}
-						index++;
-						setTimeout(changeStatus, 200);
-					}
-
-					setTimeout(function(){
-						changeStatus();
-					},200)
-				})(attrs['runningSpots']);
-
-			}
-		});
 	</script>
 </body>
 </html>
