--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,3 +68,68 @@ a {
 .fixed-div{
 	position: fixed;
 }
+
+.newGroup_container{
+	/*margin-top: 10px; */
+	font-size: 14px;
+	min-height: 600px;
+	line-height: 1.6;
+}
+.main-container{
+	background-color: #fff;
+}
+.processor-bar{
+	background-color: #fff;
+	background-image: none;
+	border-color: #e6e7ea;
+	border-bottom: 1px solid #cecece;
+	height: 44px;
+	box-shadow:none;
+	--moz-box-shadow: none;
+	--webkit-box-shadow: none;
+
+}
+#stepItems{
+	height: 44px;
+}
+#stepItems ul{
+	padding-left: 0;
+	list-style-type: none;
+	margin: 0;
+}
+.processor-bar .step{
+	background: transparent url(/images/processor_new.png) no-repeat 0 0;
+	height: 44px;
+	text-align: center;
+}
+.size1of4{
+	width: 25%;
+}
+.grid-item{
+	float: left;
+}
+
+.processor-bar .step.passed{
+	background-color: #44b549;
+	background-image: none;
+}
+
+.processor-bar .step.current{
+	background-color: #44b549;
+	background-image: none;
+}
+.processor-bar .step.next{
+	background-position: 0 -88px;
+}
+.processor-bar .step.nnext{
+	background-position: 0 0;
+}
+.processor-bar h4{
+	font-weight: 400;
+	font-style: normal;
+	width: auto;
+	overflow: hidden;
+	text-overflow:ellipsis;
+	white-space: nowrap;
+	word-wrap: normal;
+}
