--- a/views/main.html
+++ b/views/main.html
@@ -1,102 +1,129 @@
 <DOCTYPE html>
-<html ng-app="SIApp">
-<head>
-	<title>MSC</title>
-	<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap-theme.min.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/ng-grid.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/angular-toggle-switch-bootstrap-3.css">
-</head>
-<body style="padding-top: 70px;">
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation" data-ng-controller="navCtrl">
-		<ul class="nav navbar-nav">
-			<li><a href="#">{{userInfo.userName}}</a></li>
-			<li class="dropdown">
-				<a href="" class="dropdown-toggle" data-toggle="dropdown">Function<span  class="caret"></span></a>
-				<ul class="dropdown-menu" role="menu">
-					<li ng-repeat="item in userInfo.menu">
-						<a ng-href="#{{item}}" >{{item}}</a>
-					</li>
-				</ul>
-			</li>
-			<li><a href="#setPermission">Set Permission</a></li>
-		</ul>
-		<ul class="nav navbar-nav navbar-right">
-			<li><a href='#' style="margin-right: 50px;">Logout</a></li>
-		</ul>
-	</nav>
-	<div ng-view>
-		
-	</div>
-	<script type="text/javascript" src="/javascripts/jquery-2.1.1.js"></script>
-	<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
-	<script type="text/javascript" src="/javascripts/angular.js"></script>
-	<script type="text/javascript" src="/javascripts/self-services.js"></script>
-	<script type="text/javascript" src="/javascripts/self-si-controllers.js"></script>
-	<script type="text/javascript" src="/javascripts/self-user-controllers.js"></script>
-	<script type="text/javascript" src="/javascripts/angular-route.js"></script>
-	<script type="text/javascript" src="/javascripts/ng-grid.js"></script>
-	<script type="text/javascript" src="/javascripts/angular-toggle-switch.js"></script>
-	<script type="text/javascript">
-		angular.module('SIApp',['ngRoute','ngGrid','selfControllers','selfSIControllers','selfServices','toggle-switch'])
-		.config(['$routeProvider',function($routeProvider){
-			$routeProvider
-			.when('/SI',{
-				templateUrl: '/partialviews/SIMain.html',
-				controller: 'SICtrl',
-				caseInsensitiveMatch: true
-			})
-			.when('/USER/Regist',{
-				templateUrl:'/partialviews/signUp.html',
-				controller: 'UserCtrl',
-				caseInsensitiveMatch:true
-			});
-		}])
-		.controller('navCtrl',function($scope,$rootScope){
-			$rootScope.userInfo = {
-				userName:'Manager',				
-				menu:[
-					'SI'
-				],
-				Role:'Manager',
-				permission:{
-					canFilter:true,
-					canSearch:true,
-					canDispath:true,
-					canAssign:true,
-					canFinish:true
-				}
-			};
+	<html ng-app="SIApp">
+	<head>
+		<title>MSC</title>
+		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap-theme.min.css">
+		<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+		<link rel="stylesheet" type="text/css" href="/stylesheets/ng-grid.css">
+		<link rel="stylesheet" type="text/css" href="/stylesheets/angular-toggle-switch-bootstrap-3.css">
+	</head>
+	<body style="padding-top: 70px; background: #e7e8eb">
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation" data-ng-controller="navCtrl">
+			<ul class="nav navbar-nav">
+				<li><a href="/">Main</a></li>
+				<li class="dropdown">
+					<a href="" class="dropdown-toggle" data-toggle="dropdown">Function<span  class="caret"></span></a>
+					<ul class="dropdown-menu" role="menu">
+						<li ng-repeat="item in userInfo.menu">
+							<a ng-href="#{{item}}" >{{item}}</a>
+						</li>
+					</ul>
+				</li>
+				<li><a href="#setPermission"></a></li>
+				<li class="dropdown">
+					<a href="" class="dropdown-toggle" data-toggle="dropdown">Permission System<span  class="caret"></span></a>
+					<ul class="dropdown-menu" role="menu">
+						<li>
+							<a ng-href="#Permission/Group" >Group</a>
+						</li>
+					</ul>
+				</li>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#">{{userInfo.userName}}</a></li>
+				<li><a href='#' style="margin-right: 50px;">Logout</a></li>
+			</ul>
+		</nav>
+		<div ng-view>
 
-			$rootScope.userInfo = {
-				userName:'Indexer',				
-				menu:[
+		</div>
+		<script type="text/javascript" src="/javascripts/jquery-2.1.1.js"></script>
+		<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
+		<script type="text/javascript" src="/javascripts/angular.js"></script>
+		<script type="text/javascript" src="/javascripts/self-services.js"></script>
+		<script type="text/javascript" src="/javascripts/self-si-controllers.js"></script>
+		<script type="text/javascript" src="/javascripts/self-user-controllers.js"></script>
+		<script type="text/javascript" src="/javascripts/self-permission-controllers.js"></script>
+		<script type="text/javascript" src="/javascripts/angular-route.js"></script>
+		<script type="text/javascript" src="/javascripts/ng-grid.js"></script>
+		<script type="text/javascript" src="/javascripts/angular-toggle-switch.js"></script>
+		<script type="text/javascript" src="/javascripts/jquery.cookie.js"></script>
+		<script type="text/javascript">
+			angular.module('SIApp',['ngRoute','ngGrid','selfControllers','selfSIControllers','selfServices','selfPermissionCtrls','toggle-switch'])
+			.config(['$routeProvider',function($routeProvider){
+				$routeProvider
+				.when('/SI',{
+					templateUrl: '/partialviews/SIMain.html',
+					controller: 'SICtrl',
+					caseInsensitiveMatch: true
+				})
+				.when('/USER/Regist',{
+					templateUrl:'/partialviews/signUp.html',
+					controller: 'UserCtrl',
+					caseInsensitiveMatch:true
+				}).when('/Permission/Group',{
+					templateUrl:'/partialviews/group.html',
+					controller:'permissionGroupCtrl',
+					caseInsensitiveMatch:true
+				});
+			}])
+			.controller('navCtrl',function($scope,$rootScope){
+				$rootScope.userInfo = {
+					userName:'Manager',				
+					menu:[
 					'SI'
-				],
-				Role:'Indexer',
-				permission:{
-					canFilter:true,
-					canSearch:true,
-					canDispath:true,
-					canAssign:false,
-					canFinish:false
-				}
-			};
-			$rootScope.userInfo = {
-				userName:'Dispather',				
-				menu:[
+					],
+					Role:'Manager',
+					permission:{
+						canFilter:true,
+						canSearch:true,
+						canDispath:true,
+						canAssign:true,
+						canFinish:true
+					}
+				};
+
+				$rootScope.userInfo = {
+					userName:'Indexer',				
+					menu:[
 					'SI'
-				],
-				Role:'Dispather',
-				permission:{
-					canFilter:true,
-					canSearch:true,
-					canDispath:false,
-					canAssign:true,
-					canFinish:false
-				}
-			};
+					],
+					Role:'Indexer',
+					permission:{
+						canFilter:true,
+						canSearch:true,
+						canDispath:true,
+						canAssign:false,
+						canFinish:false
+					}
+				};
+				$rootScope.userInfo = {
+					userName:'Dispather',				
+					menu:[
+					'SI'
+					],
+					Role:'Dispather',
+					permission:{
+						canFilter:true,
+						canSearch:true,
+						canDispath:false,
+						canAssign:true,
+						canFinish:false
+					}
+				};
+
+				// if(JSON.parse($.cookie('user')).name == 'Guest'){
+				// 	$rootScope.userInfo ={
+				// 		userName:'Guest',
+				// 		menu:[],
+				// 		Role:'Guest',
+				// 		permission:{}
+				// 	}
+				// }
+				
+
+				
 			// $rootScope.userInfo = {
 			// 	userName:'Inputter Jason',				
 			// 	menu:[
@@ -112,6 +139,6 @@
 			// 	}
 			// };
 		})
-	</script>
+</script>
 </body>
 </html>
