continue group regist...

--- a/views/main.html
+++ b/views/main.html
@@ -63,7 +63,7 @@
 					controller: 'UserCtrl',
 					caseInsensitiveMatch:true
 				}).when('/Permission/Group',{
-					templateUrl:'/partialviews/group.html',
+					templateUrl:'/partialviews/permission/group.html',
 					controller:'permissionGroupCtrl',
 					caseInsensitiveMatch:true
 				});
