--- a/views/index.html
+++ b/views/index.html
@@ -18,16 +18,16 @@
 			<button class="btn btn-primary btn-lg">User</button> -->
 			<div class="form-inline" role="form">
 				<div class="form-group">
-					<label class="sr-only" for="loginEmail">
-						Email: 
+					<label class="sr-only" for="loginName">
+						Login Name: 
 					</label>
-					<input type="email" class="form-control" id="loginEmail" placeholder="Enter email">
+					<input type="text" ng-model="userName"  class="form-control" id="loginName" placeholder="Enter login Name">
 				</div>
 				<div class="form-group" ng-hide="userInfo.isLogin">
 					<label class="sr-only" for="loginPWD">
 						Password: 
 					</label>
-					<input type="password" class="form-control" id="loginPWD" placeholder="Enter password">
+					<input type="password" ng-model="password" class="form-control" id="loginPWD" placeholder="Enter password">
 				</div>
 				<div class="form-group">
 					<button class="btn btn-primary btn-lg" ng-click="login()">Login</button>
@@ -56,8 +56,10 @@ angular.module('mainApp',[])
 		name:'Guest',
 		isLogin:false
 	};
+	$scope.userName = '';
+	$scope.password = '';
 
-	$.cookie('user',JSON.stringify($rootScope.userInfo),{expire:7});
+	//$.cookie('user',JSON.stringify($rootScope.userInfo),{expire:7});
 
 	$scope.forgotPassword = function(){
 		window.location = 'main#/USER/ForgetPassword';
@@ -65,6 +67,19 @@ angular.module('mainApp',[])
 
 	$scope.login = function(){
 			//Ajax to validate
+			$http({
+				method:'POST',
+				url:'/API/user/LOGIN',
+				data:{
+						userName:$scope.userName,
+						password:$scope.password
+				},
+				cache:false
+			}).succsess(function(data,status){
+				alert(data);
+			}).error(function(data,status){
+				alert(data);
+			});
 			window.location = '/main';
 		}
 		$scope.registUser = function(){
