--- a/views/index.html
+++ b/views/index.html
@@ -16,24 +16,27 @@
 		<p>
 			<!-- <button class="btn btn-primary btn-lg">Public</button>
 			<button class="btn btn-primary btn-lg">User</button> -->
-			<div class="form-inline" role="form">
+			<!-- <div class="form-inline" role="form"> -->
+			<form class="form-inline" role="form" action="/API/user/LOGIN" method="POST">
 				<div class="form-group">
 					<label class="sr-only" for="loginName">
 						Login Name: 
 					</label>
-					<input type="text" ng-model="userName"  class="form-control" id="loginName" placeholder="Enter login Name">
+					<input type="text" ng-model="userName" name="userName"  class="form-control" id="loginName" placeholder="Enter login Name">
 				</div>
 				<div class="form-group" ng-hide="userInfo.isLogin">
 					<label class="sr-only" for="loginPWD">
 						Password: 
 					</label>
-					<input type="password" ng-model="password" class="form-control" id="loginPWD" placeholder="Enter password">
+					<input type="password" name="password" ng-model="password" class="form-control" id="loginPWD" placeholder="Enter password">
 				</div>
 				<div class="form-group">
-					<button class="btn btn-primary btn-lg" ng-click="login()">Login</button>
+					<!-- <button class="btn btn-primary btn-lg" ng-click="login()">Login</button> -->
+					<input type="submit" class="btn btn-primary btn-lg" value="Login">
 					<button class="btn btn-primary btn-lg" ng-click="registUser();">Regist User</button>
 				</div>
-			</div>
+			</form>
+			<!-- </div> -->
 			<div class="form-group">
 				<a href="javascript:void(0);" ng-click="forgotPassword();">Forgot your password?</a>
 			</div>
@@ -59,38 +62,38 @@ angular.module('mainApp',[])
 	$scope.userName = '';
 	$scope.password = '';
 
-		$scope.forgotPassword = function(){
-			window.location = 'main#/USER/ForgetPassword';
-		};
+	$scope.forgotPassword = function(){
+		window.location = 'main#/USER/ForgetPassword';
+	};
 
 
-		$scope.login = function() {
+	// $scope.login = function() {
 
-			$http({
-				method:'POST',
-				url:'/API/user/LOGIN',
-				data:{
-					userName:$scope.userName,
-					password:$scope.password
-				},
-				cache:false
-			}).success(function(data, status) {
+	// 	$http({
+	// 		method:'POST',
+	// 		url:'/API/user/LOGIN',
+	// 		data:{
+	// 			userName:$scope.userName,
+	// 			password:$scope.password
+	// 		},
+	// 		cache:false
+	// 	}).success(function(data, status) {
 
-				//console.log(data);
-				switch (data[0].result) {
-					case 1:
-						$.cookie('user',JSON.stringify({ userName: $scope.userName, cacheId:data[0].cacheId }), {expire:7});
-						window.location = '/main';
-						break;
-					default:
-						alert(data[0].msg);	
-						break;
-				}
+	// 			//console.log(data);
+	// 			switch (data[0].result) {
+	// 				case 1:
+	// 				$.cookie('user',JSON.stringify({ userName: $scope.userName, cacheId:data[0].cacheId }), {expire:7});
+	// 				window.location = '/main';
+	// 				break;
+	// 				default:
+	// 				alert(data[0].msg);	
+	// 				break;
+	// 			}
 
-			}).error(function(data, status) {
-				alert(data);
-			});
-		};
+	// 		}).error(function(data, status) {
+	// 			alert(data);
+	// 		});
+	// 	};
 
 
 		$scope.registUser = function(){
