--- a/views/index.html
+++ b/views/index.html
@@ -16,8 +16,8 @@
 		<p>
 			<!-- <button class="btn btn-primary btn-lg">Public</button>
 			<button class="btn btn-primary btn-lg">User</button> -->
-			<!-- <div class="form-inline" role="form"> -->
-			<form class="form-inline" role="form" action="/API/user/LOGIN" method="POST">
+			<div class="form-inline" role="form">
+			<!-- <form class="form-inline" role="form" action="/API/user/LOGIN" method="POST"> -->
 				<div class="form-group">
 					<label class="sr-only" for="loginName">
 						Login Name: 
@@ -31,12 +31,12 @@
 					<input type="password" name="password" ng-model="password" class="form-control" id="loginPWD" placeholder="Enter password">
 				</div>
 				<div class="form-group">
-					<!-- <button class="btn btn-primary btn-lg" ng-click="login()">Login</button> -->
-					<input type="submit" class="btn btn-primary btn-lg" value="Login">
+					<button class="btn btn-primary btn-lg" ng-click="login()">Login</button>
+					<!-- <input type="submit" class="btn btn-primary btn-lg" value="Login"> -->
 					<button class="btn btn-primary btn-lg" ng-click="registUser();">Regist User</button>
 				</div>
-			</form>
-			<!-- </div> -->
+			<!-- </form> -->
+			</div>
 			<div class="form-group">
 				<a href="javascript:void(0);" ng-click="forgotPassword();">Forgot your password?</a>
 			</div>
@@ -67,33 +67,37 @@ angular.module('mainApp',[])
 	};
 
 
-	// $scope.login = function() {
 
-	// 	$http({
-	// 		method:'POST',
-	// 		url:'/API/user/LOGIN',
-	// 		data:{
-	// 			userName:$scope.userName,
-	// 			password:$scope.password
-	// 		},
-	// 		cache:false
-	// 	}).success(function(data, status) {
+	$scope.login = function() {
 
-	// 			//console.log(data);
-	// 			switch (data[0].result) {
-	// 				case 1:
-	// 				$.cookie('user',JSON.stringify({ userName: $scope.userName, cacheId:data[0].cacheId }), {expire:7});
-	// 				window.location = '/main';
-	// 				break;
-	// 				default:
-	// 				alert(data[0].msg);	
-	// 				break;
-	// 			}
+		$http({
+			method:'POST',
+			url:'/API/user/LOGIN',
+			data:{
+				userName:$scope.userName,
+				password:$scope.password
+			},
+			cache:false
+		}).success(function(data, status) {
+			if(data == '1'){
+				window.location='/main';
+			}else{
+				alert('Wrong login name or wrong password');
+			}
+				// switch (data[0].result) {
+				// 	case 1:
+				// 	$.cookie('user',JSON.stringify({ userName: $scope.userName, cacheId:data[0].cacheId }), {expire:7});
+				// 	window.location = '/main';
+				// 	break;
+				// 	default:
+				// 	alert(data[0].msg);	
+				// 	break;
+				// }
 
-	// 		}).error(function(data, status) {
-	// 			alert(data);
-	// 		});
-	// 	};
+			}).error(function(data, status) {
+				alert(data);
+			});
+		};
 
 
 		$scope.registUser = function(){
