change permission view to directive

--- a/views/main.html
+++ b/views/main.html
@@ -42,6 +42,7 @@
 		<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
 		<script type="text/javascript" src="/javascripts/angular.js"></script>
 		<script type="text/javascript" src="/javascripts/self-services.js"></script>
+		<script type="text/javascript" src="/javascripts/self-directives.js"></script>
 		<script type="text/javascript" src="/javascripts/self-si-controllers.js"></script>
 		<script type="text/javascript" src="/javascripts/self-user-controllers.js"></script>
 		<script type="text/javascript" src="/javascripts/self-permission-controllers.js"></script>
