new group step 4

--- a/views/main.html
+++ b/views/main.html
@@ -4,6 +4,7 @@
 		<title>MSC</title>
 		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap-theme.min.css">
+		<link rel="stylesheet" type="text/css" href="/stylesheets/select.css">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/ng-grid.css">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/angular-toggle-switch-bootstrap-3.css">
@@ -41,6 +42,7 @@
 		<script type="text/javascript" src="/javascripts/jquery-2.1.1.js"></script>
 		<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
 		<script type="text/javascript" src="/javascripts/angular.js"></script>
+		<script type="text/javascript" src="/javascripts/select.js"></script>
 		<script type="text/javascript" src="/javascripts/self-services.js"></script>
 		<script type="text/javascript" src="/javascripts/self-directives.js"></script>
 		<script type="text/javascript" src="/javascripts/self-si-controllers.js"></script>
