add a script link

--- a/views/main.html
+++ b/views/main.html
@@ -54,6 +54,7 @@
 		<script type="text/javascript" src="/javascripts/angular-toggle-switch.js"></script>
 		<script type="text/javascript" src="/javascripts/async.js"></script>
 		<script type="text/javascript" src="/javascripts/jquery.cookie.js"></script>
+		<script type="text/javascript" src="/javascripts/calendar.js"></script>
 		<script type="text/javascript">
 			angular.module('SIApp', ['ngRoute', 'ngGrid', 'selfControllers', 'selfSIControllers', 'selfServices', 'selfPermissionCtrls', 'toggle-switch'])
 				.config(['$routeProvider', function($routeProvider) {
