--- a/views/user.html
+++ b/views/user.html
@@ -10,33 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="/stylesheets/fullcalendar.css">
 	</head>
 	<body style="padding-top: 70px; background: #e7e8eb">
-		<nav class="navbar navbar-default navbar-fixed-top" role="navigation" data-ng-controller="navCtrl">
-			<ul class="nav navbar-nav">
-				<li><a href="/">Main</a></li>
-				<li class="dropdown">
-					<a href="" class="dropdown-toggle" data-toggle="dropdown">Function<span  class="caret"></span></a>
-					<ul class="dropdown-menu" role="menu">
-						<li ng-repeat="item in userInfo.menu">
-							<a ng-href="#{{item}}" >{{item}}</a>
-						</li>
-					</ul>
-				</li>
-				<li><a href="#setPermission"></a></li>
-				<li class="dropdown">
-					<a href="" class="dropdown-toggle" data-toggle="dropdown">Permission System<span  class="caret"></span></a>
-					<ul class="dropdown-menu" role="menu">
-						<li>
-							<a href="#Permission/Group" >Group</a>
-							<a href="#Permission/ModifyPermission">Permission</a>
-						</li>
-					</ul>
-				</li>
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/user#/calendar">{{userInfo.loginName}}</a></li>
-				<li><a href='/main/logout' style="margin-right: 50px;">Logout</a></li>
-			</ul>
-		</nav>
+		<menu ng-controller="navCtrl" menu-info="userInfo" />
 		<div ng-view>
 
 		</div>
