--- a/views/soMain.html
+++ b/views/soMain.html
@@ -49,6 +49,7 @@
 		<script type="text/javascript" src="/javascripts/select.js"></script>
 		<script type="text/javascript" src="/javascripts/self-services.js"></script>
 		<script type="text/javascript" src="/javascripts/self-directives.js"></script>
+		<script type="text/javascript" src="/javascripts/self-filters.js"></script>
 		<script type="text/javascript" src="/javascripts/self-so-controllers.js"></script>
 		<script type="text/javascript" src="/javascripts/self-user-controllers.js"></script>
 		<script type="text/javascript" src="/javascripts/self-permission-controllers.js"></script>
