--- a/views/main.html
+++ b/views/main.html
@@ -80,6 +80,7 @@
 		<script type="text/javascript" src="/javascripts/self-si-controllers.js"></script>
 		<script type="text/javascript" src="/javascripts/self-user-controllers.js"></script>
 		<script type="text/javascript" src="/javascripts/self-permission-controllers.js"></script>
+		<script type="text/javascript" src="/javascripts/self-filters.js"></script>
 		<script type="text/javascript" src="/javascripts/angular-route.js"></script>
 		<script type="text/javascript" src="/javascripts/ng-grid.js"></script>
 		<script type="text/javascript" src="/javascripts/angular-toggle-switch.js"></script>
