move the unauth user page into a new page.

--- a/views/index.html
+++ b/views/index.html
@@ -63,7 +63,7 @@ angular.module('mainApp',[])
 	$scope.password = '';
 
 	$scope.forgotPassword = function(){
-		window.location = 'main#/USER/ForgetPassword';
+		window.location = 'free#/USER/ForgetPassword';
 	};
 
 
@@ -101,7 +101,7 @@ angular.module('mainApp',[])
 
 
 		$scope.registUser = function(){
-			window.location = 'main#/USER/Regist';
+			window.location = 'free#/USER/Regist';
 		};
 
 	})
