finish base info & workflow in SO.

--- a/views/soMain.html
+++ b/views/soMain.html
@@ -58,6 +58,7 @@
 		<script type="text/javascript" src="/javascripts/angular-toggle-switch.js"></script>
 		<script type="text/javascript" src="/javascripts/async.js"></script>
 		<script type="text/javascript" src="/javascripts/jquery.cookie.js"></script>
+		<script type="text/javascript" src="/javascripts/jquery-dateFormat.min.js"></script>
 		<script type="text/javascript" src="/javascripts/calendar.js"></script>
 		<script type="text/javascript">
 			angular.module('SOApp', ['ngRoute', 'ngGrid', 'selfControllers', 'selfSOControllers', 'selfServices', 'selfPermissionCtrls', 'toggle-switch'])
