fixed regist user & reset password $ force reset password

--- a/views/freeIndex.html
+++ b/views/freeIndex.html
@@ -47,6 +47,11 @@
 					controller: 'UserForgotPassowrdCtrl',
 					caseInsensitiveMatch: true
 				});
+				// .when('/USER/ForceResetPassword', {
+				// 	templateUrl: '/partialviews/forceResetPassword.html',
+				// 	controller: 'UserForceResetPasswordCtrl',
+				// 	caseInsensitiveMatch: true
+				// });
 			}]);
 
 		</script>
