--- a/views/main.html
+++ b/views/main.html
@@ -10,41 +10,14 @@
 		<link rel="stylesheet" type="text/css" href="/stylesheets/angular-toggle-switch-bootstrap-3.css">
 	</head>
 	<body style="padding-top: 70px; background: #e7e8eb">
-		<!-- <nav class="navbar navbar-default navbar-fixed-top" role="navigation" data-ng-controller="navCtrl">
-			<ul class="nav navbar-nav">
-				<li><a href="/">Main</a></li>
-				<li class="dropdown">
-					<a href="" class="dropdown-toggle" data-toggle="dropdown">Function<span  class="caret"></span></a>
-					<ul class="dropdown-menu" role="menu">
-						<li ng-repeat="item in userInfo.menu">
-							<a ng-href="#{{item}}" >{{item}}</a>
-						</li>
-					</ul>
-				</li>
-				<li><a href="#setPermission"></a></li>
-				<li class="dropdown">
-					<a href="" class="dropdown-toggle" data-toggle="dropdown">Permission System<span  class="caret"></span></a>
-					<ul class="dropdown-menu" role="menu">
-						<li>
-							<a href="#Permission/Group" >Group</a>
-							<a href="#Permission/ModifyPermission">Permission</a>
-						</li>
-					</ul>
-				</li>
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/user#/calendar">{{userInfo.loginName}}</a></li>
-				<li><a href='/main/logout' style="margin-right: 50px;">Logout</a></li>
-			</ul>
-		</nav> -->
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation" data-ng-controller="navCtrl">
 			<ul class="nav navbar-nav">
 				<li><a href="/">Main</a></li>
 				<li class="dropdown">
-					<a href="" class="dropdown-toggle" data-toggle="dropdown">Function<span  class="caret"></span></a>
+					<a href="" class="dropdown-toggle" data-toggle="dropdown" ng-show="hasPermission([2,3,4,5])">Function<span  class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
 						<li>
-							<a href="/SO#/main">SO</a>
+							<a href="/SO#/main" ng-show="hasPermission([2,3,4,5])">SO</a>
 						</li>
 						<li ng-repeat="item in userInfo.menu">
 							<a ng-href="#{{item}}" >{{item}}</a>
@@ -53,11 +26,11 @@
 				</li>
 				<li><a href="#setPermission"></a></li>
 				<li class="dropdown">
-					<a href="" class="dropdown-toggle" data-toggle="dropdown">Permission System<span  class="caret"></span></a>
+					<a href="" class="dropdown-toggle" data-toggle="dropdown" ng-show="hasPermission([6,7,8])">Permission System<span  class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
 						<li>
-							<a href="/main#/Permission/Group" >Group</a>
-							<a href="/main#/Permission/ModifyPermission">Permission</a>
+							<a href="/main#/Permission/Group" ng-show="hasPermission([6,7])" >Group</a>
+							<a href="/main#/Permission/ModifyPermission" ng-show="hasPermission([8])">Permission</a>
 						</li>
 					</ul>
 				</li>
@@ -124,77 +97,32 @@
 				}])
 				.controller('navCtrl', function($scope, $rootScope) {
 					$rootScope.userInfo = JSON.parse($.cookie('userInfo'));
-					// $rootScope.userInfo = {
-					// 	fullName:'Lyle Zhan',
-					// 	email:'lzhan@sprc.mschkg.com',
-					// 	userName:'lzhan',
-					// 	menu:[
-					// 	'SI'
-					// 	],
-					// 	Role:'Manager',
-					// 	permission:{
-					// 		canFilter:true,
-					// 		canSearch:true,
-					// 		canDispath:true,
-					// 		canAssign:true,
-					// 		canFinish:true
-					// 	}
-					// };
+					$rootScope.hasPermission = function(permissionIds) {
+						if (!$rootScope.userInfo) {
+							$rootScope.userInfo = JSON.parse($.cookie('userInfo'));
+						}
+						if(!$rootScope.userInfo || !$rootScope.userInfo.permissions ||$rootScope.userInfo.permissions.length == 0){
+							return false;
+						}
+						var owned = $rootScope.userInfo.permissions;
 
-					// $rootScope.userInfo = {
-					// 	userName:'Indexer',				
-					// 	menu:[
-					// 	'SI'
-					// 	],
-					// 	Role:'Indexer',
-					// 	permission:{
-					// 		canFilter:true,
-					// 		canSearch:true,
-					// 		canDispath:true,
-					// 		canAssign:false,
-					// 		canFinish:false
-					// 	}
-					// };
-					// $rootScope.userInfo = {
-					// 	userName:'Dispather',				
-					// 	menu:[
-					// 	'SI'
-					// 	],
-					// 	Role:'Dispather',
-					// 	permission:{
-					// 		canFilter:true,
-					// 		canSearch:true,
-					// 		canDispath:false,
-					// 		canAssign:true,
-					// 		canFinish:false
-					// 	}
-					// };
-
-					// if(JSON.parse($.cookie('user')).name == 'Guest'){
-					// 	$rootScope.userInfo ={
-					// 		userName:'Guest',
-					// 		menu:[],
-					// 		Role:'Guest',
-					// 		permission:{}
-					// 	}
-					// }
-
-
-
-					// $rootScope.userInfo = {
-					// 	userName:'Inputter Jason',				
-					// 	menu:[
-					// 		'SI'
-					// 	],
-					// 	Role:'Inputter',
-					// 	permission:{
-					// 		canFilter:true,
-					// 		canSearch:true,
-					// 		canDispath:false,
-					// 		canAssign:false,
-					// 		canFinish:true
-					// 	}
-					// };
+						if(owned.indexOf(1) != -1){
+							return true;
+						}
+						var result = false;
+						if(permissionIds && angular.isArray(permissionIds) && permissionIds.length > 0){
+							$.each(permissionIds,function(i,v){
+								if(owned.indexOf(v) != -1){
+									result = true;
+									return false;
+								}
+							});
+							return result;
+						}
+						else{
+							return false;
+						}
+					}
 				})
 </script>
 </body>
