--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -149,3 +149,22 @@ a {
 .refreshUpdated{
 	background-color: yellow;
 }
+
+.modal-body {
+    overflow-y: auto;
+}
+.modal-footer {
+    margin-top: 0;
+}
+
+.modal-dialog-center { /* Edited classname 10/03/2014 */
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+@media (max-width: 767px) {
+  .modal-dialog-center { /* Edited classname 10/03/2014 */
+    width: 100%;
+  }
+} 
