--- a/views/main.html
+++ b/views/main.html
@@ -44,6 +44,35 @@
 		<div ng-view>
 
 		</div>
+
+		<div ng-controller="rootCtrl">
+			<div class="modal" id="extraModal" data-backdrop="false">
+			<div class="modal-dialog modal-dialog-center">
+				<div class="modal-content alert alert-danger" ng-show="cover.status=='danger'">
+					<div class="modal-header" style="padding:0">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					</div>
+					<div class="modal-body" role="alert" >
+						{{cover.info}}
+					</div>
+				</div>
+				<div class="modal-content alert alert-success" ng-show="cover.status=='success'">
+					<div class="modal-header"  style="padding:0">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					</div>
+					<div class="modal-body" role="alert" >
+						{{cover.info}}
+					</div>
+				</div>
+				<div class="modal-content modal-body progress" style="padding:0" ng-show="cover.status=='load'">
+					<div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+						<span>{{cover.info}}</span>
+					</div>
+				</div>
+			</div>
+			</div>
+		</div>
+
 		<script type="text/javascript" src="/javascripts/jquery-2.1.1.js"></script>
 		<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
 		<script type="text/javascript" src="/javascripts/angular.js"></script>
@@ -54,6 +83,7 @@
 		<script type="text/javascript" src="/javascripts/self-user-controllers.js"></script>
 		<script type="text/javascript" src="/javascripts/self-permission-controllers.js"></script>
 		<script type="text/javascript" src="/javascripts/self-filters.js"></script>
+		<script type="text/javascript" src="/javascripts/self-root.js"></script>
 		<script type="text/javascript" src="/javascripts/angular-route.js"></script>
 		<script type="text/javascript" src="/javascripts/ng-grid.js"></script>
 		<script type="text/javascript" src="/javascripts/angular-toggle-switch.js"></script>
