--- a/views/user.html
+++ b/views/user.html
@@ -1,6 +1,7 @@
 <DOCTYPE html>
 	<html ng-app="userApp">
 	<head>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>MSC</title>
 		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap-theme.min.css">
