--- a/views/soMain.html
+++ b/views/soMain.html
@@ -1,6 +1,7 @@
 <DOCTYPE html>
 	<html ng-app="SOApp">
 	<head>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>MSC</title>
 		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap-theme.min.css">
@@ -12,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="/stylesheets/jquery-ui.css">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap-tagsinput.css">
 	</head>
-	<body style="padding-top: 70px; background: #e7e8eb;">
+	<body style="padding-top: 70px; background: #e7e8eb;font-size: 1.2em;">
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation" data-ng-controller="navCtrl">
 			<ul class="nav navbar-nav">
 				<li><a href="/">Main</a></li>
