--- a/views/main.html
+++ b/views/main.html
@@ -10,18 +10,18 @@
 		<link rel="stylesheet" type="text/css" href="/stylesheets/ng-grid.css">
 		<link rel="stylesheet" type="text/css" href="/stylesheets/angular-toggle-switch-bootstrap-3.css">
 	</head>
-	<body style="padding-top: 70px; background: #e7e8eb">
+	<body style="padding-top: 70px; background: #e7e8eb;font-size: 1.2em;">
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation" data-ng-controller="navCtrl">
 			<ul class="nav navbar-nav">
 				<li><a href="/">Main</a></li>
 				<li class="dropdown">
-					<a href="" class="dropdown-toggle" data-toggle="dropdown" ng-show="hasPermission([2,3,4,5])">Function<span  class="caret"></span></a>
+					<a href="" class="dropdown-toggle" data-toggle="dropdown" ng-show="hasPermission([2,3,4,5])">CSR<span  class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
 						<li>
 							<a href="/SO#/main" ng-show="hasPermission([2,3,4,5])">SO</a>
 						</li>
-						<li ng-repeat="item in userInfo.menu">
-							<a ng-href="#{{item}}" >{{item}}</a>
+						<li>
+							<a href="/SO#/statistic">Statistic</a>
 						</li>
 					</ul>
 				</li>
@@ -78,6 +78,7 @@
 		<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
 		<script type="text/javascript" src="/javascripts/angular.js"></script>
 		<script type="text/javascript" src="/javascripts/select.js"></script>
+		<script type="text/javascript" src="/javascripts/self-root.js"></script>
 		<script type="text/javascript" src="/javascripts/self-services.js"></script>
 		<script type="text/javascript" src="/javascripts/self-directives.js"></script>
 		<script type="text/javascript" src="/javascripts/self-si-controllers.js"></script>
@@ -92,7 +93,7 @@
 		<script type="text/javascript" src="/javascripts/jquery.cookie.js"></script>
 		<script type="text/javascript" src="/javascripts/calendar.js"></script>
 		<script type="text/javascript">
-			angular.module('SIApp', ['ngRoute', 'ngGrid', 'selfControllers', 'selfSIControllers', 'selfServices', 'selfPermissionCtrls', 'toggle-switch','selfDirectives'])
+			angular.module('SIApp', ['ngRoute', 'ngGrid', 'selfControllers', 'selfSIControllers', 'selfServices', 'selfPermissionCtrls', 'toggle-switch','selfDirectives','selfRootController'])
 				.config(['$routeProvider', function($routeProvider) {
 					$routeProvider
 						.when('/SI', {
@@ -127,34 +128,34 @@
 						});
 				}])
 				.controller('navCtrl', function($scope, $rootScope) {
-					$rootScope.userInfo = JSON.parse($.cookie('userInfo'));
-					$rootScope.hasPermission = function(permissionIds) {
-						if (!$rootScope.userInfo) {
-							$rootScope.userInfo = JSON.parse($.cookie('userInfo'));
-						}
-						if(!$rootScope.userInfo || !$rootScope.userInfo.permissions ||$rootScope.userInfo.permissions.length == 0){
-							return false;
-						}
-						var owned = $rootScope.userInfo.permissions;
+					// $rootScope.userInfo = JSON.parse($.cookie('userInfo'));
+					// $rootScope.hasPermission = function(permissionIds) {
+					// 	if (!$rootScope.userInfo) {
+					// 		$rootScope.userInfo = JSON.parse($.cookie('userInfo'));
+					// 	}
+					// 	if(!$rootScope.userInfo || !$rootScope.userInfo.permissions ||$rootScope.userInfo.permissions.length == 0){
+					// 		return false;
+					// 	}
+					// 	var owned = $rootScope.userInfo.permissions;
 
-						if(owned.indexOf(1) != -1){
-							return true;
-						}
-						var result = false;
-						if(permissionIds && angular.isArray(permissionIds) && permissionIds.length > 0){
-							$.each(permissionIds,function(i,v){
-								if(owned.indexOf(v) != -1){
-									result = true;
-									return false;
-								}
-							});
-							return result;
-						}
-						else{
-							return false;
-						}
-					}
-				})
+					// 	if(owned.indexOf(1) != -1){
+					// 		return true;
+					// 	}
+					// 	var result = false;
+					// 	if(permissionIds && angular.isArray(permissionIds) && permissionIds.length > 0){
+					// 		$.each(permissionIds,function(i,v){
+					// 			if(owned.indexOf(v) != -1){
+					// 				result = true;
+					// 				return false;
+					// 			}
+					// 		});
+					// 		return result;
+					// 	}
+					// 	else{
+					// 		return false;
+					// 	}
+					// }
+				});
 </script>
 </body>
 </html>
