--- a/views/soMain.html
+++ b/views/soMain.html
@@ -18,13 +18,13 @@
 			<ul class="nav navbar-nav">
 				<li><a href="/">Main</a></li>
 				<li class="dropdown">
-					<a href="" class="dropdown-toggle" data-toggle="dropdown" ng-show="hasPermission([2,3,4,5])">Function<span  class="caret"></span></a>
+					<a href="" class="dropdown-toggle" data-toggle="dropdown" ng-show="hasPermission([2,3,4,5])">CSR<span  class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
 						<li>
 							<a href="/SO#/main" ng-show="hasPermission([2,3,4,5])">SO</a>
 						</li>
-						<li ng-repeat="item in userInfo.menu">
-							<a ng-href="#{{item}}" >{{item}}</a>
+						<li>
+							<a href="/SO#/statistic">Statistic</a>
 						</li>
 					</ul>
 				</li>
@@ -104,6 +104,7 @@
 		<script type="text/javascript" src="/javascripts/jquery-ui.js"></script>
 		<script type="text/javascript" src="/javascripts/bootstrap-tagsinput.js"></script>
 		<script type="text/javascript" src="/javascripts/bootstrap-tagsinput-angular.min.js"></script>
+		<script type="text/javascript" src="/javascripts/Chart.js"></script>
 		<script type="text/javascript">
 			angular.module('SOApp', ['ngRoute', 'ngGrid', 'selfControllers', 'selfSOControllers', 'selfServices', 'selfPermissionCtrls', 'toggle-switch', 'angularFileUpload','selfRootController'])
 				.config(['$routeProvider', function($routeProvider) {
@@ -113,64 +114,44 @@
 							controller: 'SOCtrl',
 							caseInsensitiveMatch: true
 						})
-						.when('/SI', {
-							templateUrl: '/partialviews/SIMain.html',
-							controller: 'SICtrl',
-							caseInsensitiveMatch: true
-						})
-						.when('/USER/Regist', {
-							templateUrl: '/partialviews/signUp.html',
-							controller: 'UserCtrl',
-							caseInsensitiveMatch: true
-						})
-						.when('/USER/ForgetPassword', {
-							templateUrl: '/partialviews/forgetPassword.html',
-							controller: 'UserForgotPassowrdCtrl',
-							caseInsensitiveMatch: true
-						})
-						.when('/USER/ForceResetPassword', {
-							templateUrl: '/partialviews/forceResetPassword.html',
-							controller: 'UserForceResetPasswordCtrl',
-							caseInsensitiveMatch: true
-						})
-						.when('/Permission/Group', {
-							templateUrl: '/partialviews/permission/group.html',
-							controller: 'permissionGroupCtrl',
-							caseInsensitiveMatch: true
-						})
-						.when('/Permission/ModifyPermission', {
-							templateUrl: '/partialviews/permission/ModifyPermission.html',
-							controller: 'permissionCtrl',
-							caseInsensitiveMatch: true
+						.when('/statistic',{
+							templateUrl:'partialviews/so/statistic.html',
+							controller:'statisticCtrl',
+							caseInsensitiveMatch:true
 						});
+						// .when('/SI', {
+						// 	templateUrl: '/partialviews/SIMain.html',
+						// 	controller: 'SICtrl',
+						// 	caseInsensitiveMatch: true
+						// })
+						// .when('/USER/Regist', {
+						// 	templateUrl: '/partialviews/signUp.html',
+						// 	controller: 'UserCtrl',
+						// 	caseInsensitiveMatch: true
+						// })
+						// .when('/USER/ForgetPassword', {
+						// 	templateUrl: '/partialviews/forgetPassword.html',
+						// 	controller: 'UserForgotPassowrdCtrl',
+						// 	caseInsensitiveMatch: true
+						// })
+						// .when('/USER/ForceResetPassword', {
+						// 	templateUrl: '/partialviews/forceResetPassword.html',
+						// 	controller: 'UserForceResetPasswordCtrl',
+						// 	caseInsensitiveMatch: true
+						// })
+						// .when('/Permission/Group', {
+						// 	templateUrl: '/partialviews/permission/group.html',
+						// 	controller: 'permissionGroupCtrl',
+						// 	caseInsensitiveMatch: true
+						// })
+						// .when('/Permission/ModifyPermission', {
+						// 	templateUrl: '/partialviews/permission/ModifyPermission.html',
+						// 	controller: 'permissionCtrl',
+						// 	caseInsensitiveMatch: true
+						// });
 				}])
 				.controller('navCtrl', function($scope, $rootScope) {
-					$rootScope.userInfo = JSON.parse($.cookie('userInfo'));
-					$rootScope.hasPermission = function(permissionIds) {
-						if (!$rootScope.userInfo) {
-							$rootScope.userInfo = JSON.parse($.cookie('userInfo'));
-						}
-						if (!$rootScope.userInfo || !$rootScope.userInfo.permissions || $rootScope.userInfo.permissions.length == 0) {
-							return false;
-						}
-						var owned = $rootScope.userInfo.permissions;
-
-						if (owned.indexOf(1) != -1) {
-							return true;
-						}
-						var result = false;
-						if (permissionIds && angular.isArray(permissionIds) && permissionIds.length > 0) {
-							$.each(permissionIds, function(i, v) {
-								if (owned.indexOf(v) != -1) {
-									result = true;
-									return false;
-								}
-							});
-							return result;
-						} else {
-							return false;
-						}
-					}
+					
 					
 				});
 </script>
